--- a/src/global-header.css
+++ b/src/global-header.css
@@ -27,7 +27,6 @@
     justify-content: space-between;
     height: var(--global-header-topbar-height);
     background-color: var(--system-palette-bg-default-500);
-    transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1) 0s;
   }
   
   .header-breadcrumbs {
@@ -50,7 +49,6 @@
     height: 100vh;
 
     background-color: var(--system-palette-bg-default-500);
-    transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1) 0s;
   }
 
   .frontliner-drawer-container {
@@ -72,29 +70,31 @@
     bottom: 0;
   }
   
-  .drawer-button {
+.global-header-button {
     appearance: none;
     border: none;
     border-radius: 0px;
     cursor: pointer;
     height: 4rem;
-    width: 100%;
-    background-color: inherit;
-    background-size: 2rem;
-    background-repeat: no-repeat;
-    background-position: center center;
+    width: var(--global-header-sidebar-width);
+    background: none;
+}
+
+.global-header-button svg {
+    color: var(--system-text-default-default);
+    transition: all .5s ease;
+  }
+
+  .global-header-button:hover svg {
+    color: var(--system-action-hovered);
+  }
+
+  .drawer-button:hover svg {
+    transform: rotate(30deg);
   }
   
-  .drawer-button--active {
+  .global-header-button--active {
     background-color: var(--system-palette-bg-default-100);
-  }
-  
-  .drawer-button--settings {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Ctitle%3Esettings gear%3C/title%3E%3Cg class='nc-icon-wrapper' stroke-linecap='square' stroke-linejoin='miter' stroke-width='1.5' fill='%23331e11' stroke='%23331e11'%3E%3Ccircle data-color='color-2' cx='16' cy='16' r='4' fill='none' stroke-miterlimit='10'/%3E%3Cpath d='M27,16a11.057,11.057,0,0,0-.217-2.175L30.49,11.1l-3-5.2L23.263,7.754a10.955,10.955,0,0,0-3.754-2.172L19,1H13l-.509,4.582A10.955,10.955,0,0,0,8.737,7.754L4.51,5.9l-3,5.2,3.707,2.727a11.009,11.009,0,0,0,0,4.35L1.51,20.9l3,5.2,4.227-1.852a10.955,10.955,0,0,0,3.754,2.172L13,31h6l.509-4.582a10.955,10.955,0,0,0,3.754-2.172L27.49,26.1l3-5.2-3.707-2.727A11.057,11.057,0,0,0,27,16Z' fill='none' stroke='%23331e11' stroke-miterlimit='10'/%3E%3C/g%3E%3C/svg%3E");
-  }
-  
-  .theme-dark .drawer-button--settings {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Ctitle%3Esettings gear%3C/title%3E%3Cg class='nc-icon-wrapper' stroke-linecap='square' stroke-linejoin='miter' stroke-width='1.5' fill='%23e8e0d9' stroke='%23e8e0d9'%3E%3Ccircle data-color='color-2' cx='16' cy='16' r='4' fill='none' stroke-miterlimit='10'/%3E%3Cpath d='M27,16a11.057,11.057,0,0,0-.217-2.175L30.49,11.1l-3-5.2L23.263,7.754a10.955,10.955,0,0,0-3.754-2.172L19,1H13l-.509,4.582A10.955,10.955,0,0,0,8.737,7.754L4.51,5.9l-3,5.2,3.707,2.727a11.009,11.009,0,0,0,0,4.35L1.51,20.9l3,5.2,4.227-1.852a10.955,10.955,0,0,0,3.754,2.172L13,31h6l.509-4.582a10.955,10.955,0,0,0,3.754-2.172L27.49,26.1l3-5.2-3.707-2.727A11.057,11.057,0,0,0,27,16Z' fill='none' stroke='%23e8e0d9' stroke-miterlimit='10'/%3E%3C/g%3E%3C/svg%3E");
   }
   
   .frontliner-logo {
@@ -115,8 +115,14 @@
     background-position: 50% center;
     background-repeat: no-repeat;
     background-size: calc(var(--global-header-sidebar-width) / 2);
+
+    transition: all .2s ease;
   }
   
+  .frontliner-logo:hover {
+    transform: scale(1.1);
+  }
+
   :root.if.theme-dark .frontliner-logo {
     background-image: url("data:image/svg+xml,%3Csvg width='128' height='128' viewBox='0 0 128 128' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M38.2222 8C30.3675 8 24 14.3675 24 22.2222C24 23.2041 24.7959 24 25.7778 24H72C85.2548 24 96 34.7452 96 48C96 61.2548 85.2548 72 72 72H57.7778C56.7959 72 56 72.7959 56 73.7778C56 81.6325 62.3675 88 70.2222 88H72C94.0914 88 112 70.0914 112 48C112 25.9086 94.0914 8 72 8H38.2222Z' fill='%235A8AE2'/%3E%3Cpath d='M38.2222 8C30.3675 8 24 14.3675 24 22.2222C24 23.2041 24.7959 24 25.7778 24H72C85.2548 24 96 34.7452 96 48C96 61.2548 85.2548 72 72 72H57.7778C56.7959 72 56 72.7959 56 73.7778C56 81.6325 62.3675 88 70.2222 88H72C94.0914 88 112 70.0914 112 48C112 25.9086 94.0914 8 72 8H38.2222Z' fill='url(%23paint0_linear_15_545)' style='mix-blend-mode:overlay'/%3E%3Cpath d='M40 40C31.1634 40 24 47.1634 24 56V118.222C24 119.204 24.7959 120 25.7778 120C33.6325 120 40 113.632 40 105.778V58C40 56.8954 40.8954 56 42 56H65.7778C73.6325 56 80 49.6325 80 41.7778C80 40.7959 79.2041 40 78.2222 40H40Z' fill='%235A8AE2'/%3E%3Cpath d='M40 40C31.1634 40 24 47.1634 24 56V118.222C24 119.204 24.7959 120 25.7778 120C33.6325 120 40 113.632 40 105.778V58C40 56.8954 40.8954 56 42 56H65.7778C73.6325 56 80 49.6325 80 41.7778C80 40.7959 79.2041 40 78.2222 40H40Z' fill='url(%23paint1_linear_15_545)' style='mix-blend-mode:overlay'/%3E%3C/svg%3E%0A");
   }
@@ -145,7 +151,6 @@
     background-color: var(--system-palette-bg-default-100);
 
     transform: translateX(calc(100% + var(--global-header-sidebar-width)));
-    transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1) 0s;
   }
   
   .frontliner-header-drawer--open {
