--- a/src/communication-search.css
+++ b/src/communication-search.css
@@ -26,6 +26,21 @@
     background-color: var(--system-palette-bg-default-200);
 }
 
+.communication-search-meta-list {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 2rem;
+    row-gap: 1rem;
+    margin: 0;
+    padding: 0;
+}
+
+.communication-search-meta-list > li {
+    flex: 1 1 25%;
+    white-space: nowrap;
+}
+
 /* Card component hover effect */
 a.if.card {
     transition: all 0.1s ease-in-out;
