Dark theme alerts

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3,6 +3,6 @@
 @import '@ids/style-bundle';
 @import './theme-dark.css';
 
-@import './global-header.css';
-
 @import './communication-search.css';
+
+@import './letterman.css';
